src/styles.css
/* You can add global styles to this file, and also import other style files */
html,
body {
    background-color: #333;
}

html body *,
html body button.btn.btn-link {
    font-family: "Andale Mono", Arial, sans-serif !important;
}
.panel {
	margin: 75px;
	padding: 25px;
	color: #fff;
	background-color: #555;
    border-radius: 25px;
}
button.btn.btn-link {
    display: block;
    padding: 7px 0;
    color: #fff;
    text-decoration: none;
    cursor: pointer;
}
button.btn.btn-link:hover {
    color: #0bb8b6;
}
.text-right {
    text-align: right;
}

